--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-polyfill": "^6.23.0",
     "babel-runtime": "^6.23.0",
     "better-scroll": "^0.1.15",
+    "bluebird": "^3.5.1",
     "blueimp-md5": "^2.7.0",
     "core-js": "^2.4.1",
     "echarts": "^3.8.5",
