--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "safe_cloud",
   "version": "1.0.0",
-  "description": "安全服务云app-新版Demo",
+  "description": "安全服务云app-新版",
   "author": "YYD <yyd-yyd@hotmail.com>",
   "private": true,
   "scripts": {
