--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "moment": "^2.17.1",
     "nprogress": "^0.2.0",
     "object-assign": "^4.1.1",
-    "vee-validate": "^2.0.0-beta.23",
+    "vee-validate": "^2.0.3",
     "vue": "^2.1.10",
     "vue-form": "^0.3.1",
     "vue-router": "^2.2.0",
